GNOME Bugzilla – Bug 625554
compiler warning: missing NULL sentinel
Last modified: 2010-08-06 11:01:51 UTC
Created attachment 166755 [details] [review] Patch fixing the build warning while building gnome-media 2.31.5, the compiler warns about missing NULL sentinel. The attached (simple) patch fixes the warning.
Review of attachment 166755 [details] [review]: please commit. thanks
Can't be done by me, as I don't have commit access. Sorry.
Thanks for the patch! commit 7287354c52b786de3469b44b0912c53de0c0a9c4 Author: Dominique Leuenberger <dimstar@opensuse.org> Date: Thu Jul 29 10:23:00 2010 +0200 fix build warning: E: gnome-media missing-sentinel gmp-util.c:160 https://bugzilla.gnome.org/show_bug.cgi?id=625554
*** Bug 626184 has been marked as a duplicate of this bug. ***