fix build warning: E: gnome-media missing-sentinel gmp-util.c:160

https://bugzilla.gnome.org/show_bug.cgi?id=625554