gmp-util.c
@@ -157,7 +157,7 @@ gmp_util_show_error_dialog (GtkWindow *transient_parent,
   {
     g_return_if_fail (GTK_IS_MESSAGE_DIALOG (*weak_ptr));
 
-    g_object_set (*weak_ptr, "text", message);
+    g_object_set (*weak_ptr, "text", message, NULL);
 
     gtk_window_present (GTK_WINDOW (*weak_ptr));
   }
